--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -24,3 +24,6 @@ $buttondistance: 12pt !default;
 
 // En/disable box-shadows
 $shadows: 1 !default;
+
+// En/disable included font
+$use-included-font: 1 !default;
