--- a/scss/modules/_tabs.scss
+++ b/scss/modules/_tabs.scss
@@ -7,12 +7,14 @@
   }
   background: transparentize($color-black, .98);
   display: flex;
+  display: -webkit-flex;
   font-family: $font-family-secondary;
   list-style: none;
   margin: 0;
   padding: 0;
 
   li {
+    -webkit-flex: 1 1 auto;
     color: transparentize($color-black, .5);
     cursor: pointer;
     flex: 1 1 auto;
