--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -9,6 +9,7 @@ button {
   height: 1.8em;
   opacity: .7;
   outline: none;
+  padding: 0;
   transition: box-shadow .5s, color .5s;
   width: 1.8em;
 
