--- a/scss/modules/_map.scss
+++ b/scss/modules/_map.scss
@@ -28,12 +28,20 @@
     width: auto;
   }
 
-  @media all and (device-width: 768px) and (device-height: 1024px) and (orientation: portrait) {
+  @media all and (device-height: 1024px) and (orientation: portrait) {
     height: 800px;
   }
 
-  @media all and (device-width: 768px) and (device-height: 1024px) and (orientation: landscape) {
+  @media all and (device-width: 768px) and (orientation: landscape) {
     height: 400px;
+  }
+
+  @media only screen and (device-height: 568px) and (orientation: portrait) {
+    height: 320px;
+  }
+
+  @media only screen and (device-width: 320px) and (orientation: landscape) {
+    height: 240px;
   }
 }
 
