--- a/scss/modules/_tabs.scss
+++ b/scss/modules/_tabs.scss
@@ -28,7 +28,7 @@
   }
 
   .visible {
-    border-bottom: 2pt solid $color-primary;
+    border-bottom: 2px solid $color-primary;
     color: $color-primary;
   }
 }
