--- a/scss/modules/_map.scss
+++ b/scss/modules/_map.scss
@@ -6,22 +6,22 @@
   .buttons {
     direction: rtl;
     position: absolute;
-    right: $buttondistance;
-    top: $buttondistance;
+    right: $button-distance;
+    top: $button-distance;
     unicode-bidi: bidi-override;
     z-index: 100;
 
     button {
-      margin-left: $buttondistance;
+      margin-left: $button-distance;
     }
-    @media screen and (max-width: $minscreenwidth) {
+    @media screen and (max-width: $min-screen-width) {
       right: -1rem;
       top: 0;
       transform: scale(.8);
     }
   }
 
-  @media screen and (max-width: $minscreenwidth) {
+  @media screen and (max-width: $min-screen-width) {
     height: calc(100vh - 150px);
     min-height: 240px;
     position: relative;
