--- a/scss/modules/_table.scss
+++ b/scss/modules/_table.scss
@@ -1,7 +1,7 @@
 table {
   border-collapse: separate;
   border-spacing: 0 .5em;
-  padding: 0 $buttondistance;
+  padding: 0 $button-distance;
   width: 100%;
 
   &.attributes {
