--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -15,7 +15,7 @@ $font-family: Assistant, sans-serif !default;
 $font-family-icons: ionicons !default;
 $font-family-monospace: monospace !default;
 $font-size: 15px !default;
-$font-size-small: $font-size / 1.4 !default;
+$font-size-small: 11px !default;
 
 $button-font-size: 1.6rem !default;
 $button-distance: 16px !default;
