[TASK] Replace Roboto font with Assistant font

--- a/scss/modules/font/_font.scss
+++ b/scss/modules/font/_font.scss
@@ -1,7 +1,6 @@
 $font-path: 'fonts';
 
 @if $use-included-font == 1 {
-  @include load-font('Roboto', 'Regular', 400, normal);
-  @include load-font('RobotoSlab', 'Regular', 400, normal, 'Roboto Slab');
-  @include load-font('RobotoSlab', 'Bold', 700, normal, 'Roboto Slab');
+  @include load-font('Assistant', 'Light', 300, normal);
+  @include load-font('Assistant', 'Bold', 700, normal);
 }
