--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -11,8 +11,7 @@ $color-online: #1566a9 !default;
 $color-offline: #cf3e2a !default;
 $color-unseen: #d89100 !default;
 
-$font-family: 'Roboto Slab', serif !default;
-$font-family-secondary: Roboto, sans-serif !default;
+$font-family: Assistant, sans-serif !default;
 $font-family-icons: ionicons !default;
 $font-family-monospace: monospace !default;
 $font-size: 15px !default;
