[TASK] Adjust to new sass-lint rule

--- a/assets/icons/_icon-mixin.scss
+++ b/assets/icons/_icon-mixin.scss
@@ -1,6 +1,6 @@
 @mixin icon($name, $code, $prefix: 'ion-') {
   .#{$prefix}#{$name} {
-    &:before {
+    &::before {
       content: '#{$code}';
     }
   }
