--- a/scss/modules/_base.scss
+++ b/scss/modules/_base.scss
@@ -1,5 +1,6 @@
 body {
   -webkit-tap-highlight-color: transparent;
+  background: $color-white;
   color: $color-black;
   font-family: $font-family;
   font-size: $font-size;
