--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -7,6 +7,7 @@ button {
   font-family: $font-family-icons;
   font-size: $button-font-size;
   height: 1.8em;
+  line-height: 1.95;
   opacity: .7;
   outline: none;
   padding: 0;
@@ -37,7 +38,7 @@ button {
   }
 
   &.close {
-    background: none;
+    background-color: transparent;
     border-radius: 0;
     @if $shadows == 1 {
       box-shadow: none;
@@ -46,6 +47,7 @@ button {
     float: right;
     font-size: $button-font-size;
     height: auto;
+    line-height: 1.2;
     margin: $button-distance;
     width: auto;
   }
