[BUGFIX] Unset close button background in night scss

--- a/scss/night.scss
+++ b/scss/night.scss
@@ -95,6 +95,7 @@ $color-black: #fefefe;
     }
 
     &.close {
+      background: transparent;
       color: transparentize($color-black, .5);
     }
   }
