[TASK] Add node filter

--- a/assets/icons/icon.scss
+++ b/assets/icons/icon.scss
@@ -43,3 +43,4 @@
 @include icon('android-remove', '\f2f4');
 @include icon('ios-person', '\f47e');
 @include icon('layer', '\f229');
+@include icon('filter', '\f38B');
