--- a/scss/night.scss
+++ b/scss/night.scss
@@ -35,6 +35,13 @@ html {
     }
   }
 
+  //@import 'modules/filter';
+  .filter-node {
+    input {
+      color: $color-black;
+    }
+  }
+
   //@import 'modules/sidebar';
   .sidebar {
     .infobox, .container {
