[TASK] Load mode style inline

--- a/scss/night.scss
+++ b/scss/night.scss
@@ -5,7 +5,7 @@
 $color-white: #111;
 $color-black: #fefefe;
 
-.night {
+html {
   //@import 'modules/base';
   body {
     background: $color-white;
