--- a/scss/modules/_infobox.scss
+++ b/scss/modules/_infobox.scss
@@ -4,7 +4,8 @@
     font-family: $font-family-icons;
   }
 
-  input, textarea {
+  input,
+  textarea {
     border: 1px solid $color-gray-light;
     font-family: $font-family-monospace;
     font-size: 1.15em;
