--- a/scss/modules/_tabs.scss
+++ b/scss/modules/_tabs.scss
@@ -7,13 +7,13 @@
   }
   background: transparentize($color-black, .98);
   display: flex;
-  display: -webkit-flex;
+  display: -webkit-flex; // sass-lint:disable-line no-vendor-prefixes no-duplicate-properties
   list-style: none;
   margin: 0;
   padding: 0;
 
   li {
-    -webkit-flex: 1 1 auto;
+    -webkit-flex: 1 1 auto; // sass-lint:disable-line no-vendor-prefixes
     color: transparentize($color-black, .5);
     cursor: pointer;
     flex: 1 1 auto;
