--- a/scss/modules/_table.scss
+++ b/scss/modules/_table.scss
@@ -36,7 +36,9 @@ th {
   font-weight: bold;
 
   &[class*=' ion-'] {
-    font-size: 1.3em;
+    &::before {
+      font-size: 1.3em;
+    }
   }
 
   &.sort-header {
