--- a/scss/modules/_leaflet.scss
+++ b/scss/modules/_leaflet.scss
@@ -36,17 +36,27 @@
   }
 
   .leaflet-control-layers-toggle {
-    background: none;
-    height: auto;
-    width: auto;
+    background: $color-white;
+    border-radius: 50%;
+    color: $color-black;
+    display: block;
+    font-size: 1.6rem;
+    height: 1.8em;
+    line-height: 1.95;
+    margin-right: 16px;
+    opacity: .7;
+    text-align: center;
+    transition: background-color .5s, color .5s;
+    width: 1.8em;
+
+    @media screen and (max-width: map-get($grid-breakpoints, lg) - 1) {
+      margin-right: -2px;
+      transform: scale(.8);
+    }
 
     &::before {
-      color: $color-primary;
       content: '\f229';
-      display: inline-block;
-      font-family: $font-family-icons;
-      font-size: 2.3rem;
-      line-height: 1;
+      font-family: ionicons;
       speak: none;
       text-rendering: auto;
     }
@@ -306,6 +316,39 @@
 
     &::before {
       display: none;
+    }
+  }
+}
+
+.leaflet-control-zoom {
+  opacity: .7;
+  right: 16px;
+  top: 65px;
+
+  @media screen and (max-width: map-get($grid-breakpoints, lg) - 1) {
+    right: calc(100vw - 50px);
+    top: -10px;
+    transform: scale(.8);
+  }
+
+  a {
+    background: $color-white;
+    border-radius: 5px 5px 0 0;
+    color: $color-black;
+    display: block;
+    font-size: 40px;
+    height: 46px;
+    text-align: center;
+    transition: background-color .5s, color .5s;
+    width: 46px;
+
+    &:hover {
+      color: $color-primary;
+    }
+
+    + a {
+      border-radius: 0 0 5px 5px;
+      border-top: 1px solid $color-gray-light;
     }
   }
 }
