--- a/scss/night.scss
+++ b/scss/night.scss
@@ -17,15 +17,25 @@ html {
     background: transparentize($color-black, .98);
   }
 
-  //@import 'leaflet';
+  //@import 'modules/leaflet';
   .leaflet-container {
     background: $color-map-background;
   }
 
-  //@import 'modules/leaflet';
   .leaflet-label {
     &.leaflet-label-right {
       background-color: $color-white;
+    }
+  }
+
+  .leaflet-control-zoom {
+    a {
+      background: lighten($color-white, 10);
+      color: $color-black;
+
+      &:hover {
+        background: $color-white;
+      }
     }
   }
 
