--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -14,6 +14,21 @@ button {
   transition: box-shadow .5s, background-color .5s, color .5s;
   width: 1.8em;
 
+  &.text {
+    background: $color-primary;
+    border: 1px solid $color-primary;
+    border-radius: 0;
+    color: $color-white;
+    font: inherit;
+    line-height: initial;
+    padding: 0 20px;
+    width: auto;
+
+    &:hover {
+      background: $color-white;
+    }
+  }
+
   &.active {
     box-shadow: 0 0 0 2px $color-primary;
   }
