--- a/scss/modules/_map.scss
+++ b/scss/modules/_map.scss
@@ -16,7 +16,7 @@
     }
 
     @media screen and (max-width: map-get($grid-breakpoints, lg) - 1) {
-      right: 0.1rem;
+      right: .1rem;
       top: 0;
       transform: scale(.8);
       transform-origin: right;
