[TASK] Split clients into 2,4 Ghz, 5 Ghz & others

--- a/scss/modules/_infobox.scss
+++ b/scss/modules/_infobox.scss
@@ -1,7 +1,15 @@
 .infobox {
   .clients {
-    color: $color-online;
-    font-family: $font-family-icons;
+    display: flex;
+
+    span {
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .ion-people {
+      font-size: 1.5em;
+    }
   }
 
   input,
