--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -29,7 +29,8 @@ button {
     }
   }
 
-  &.active {
+  &.active,
+  &:focus {
     box-shadow: 0 0 0 2px $color-primary;
   }
 
@@ -71,5 +72,35 @@ button {
     line-height: 1.2;
     margin: $button-distance;
     width: auto;
+  }
+}
+
+// Tooltip
+// sass-lint:disable-block nesting-depth
+.content,
+.sidebar > {
+  button {
+    &[aria-label] {
+      &::after {
+        background: $color-black;
+        border-radius: 3px;
+        color: $color-white;
+        content: attr(aria-label);
+        font-family: $font-family;
+        font-size: $font-size;
+        padding: 0 12px;
+        position: absolute;
+        transform: translate(45px, 52px);
+        visibility: hidden;
+        white-space: nowrap;
+      }
+
+      &:hover {
+        &::after {
+          transition: visibility 0s linear .3s;
+          visibility: visible;
+        }
+      }
+    }
   }
 }
