--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -12,6 +12,13 @@
     .sidebarhandle {
       left: $button-distance;
       transform: scale(-1, 1);
+
+      // sass-lint:disable-block nesting-depth
+      &[aria-label] {
+        &::after {
+          transform: scale(-1, 1) translate(105px, 52px) !important; // sass-lint:disable-line no-important
+        }
+      }
     }
     @media screen and (max-width: map-get($grid-breakpoints, lg) - 1) {
       width: auto;
@@ -116,9 +123,15 @@
   transition: left .5s, color .5s, transform .5s;
   z-index: 1010;
 
-  &::after {
+  &::before {
     content: '\f124';
     padding-right: .125em;
+  }
+
+  &[aria-label] {
+    &::after {
+      transform: translate(-45px, 52px) !important; // sass-lint:disable-line no-important
+    }
   }
 }
 
