--- a/scss/night.scss
+++ b/scss/night.scss
@@ -1,4 +1,4 @@
-// Overwrite normal style (colors) - shadows are ignored
+// Overwrite normal style (colors)
 @import 'modules/variables';
 @import 'custom/variables';
 
