--- a/scss/modules/_infobox.scss
+++ b/scss/modules/_infobox.scss
@@ -8,7 +8,8 @@
       text-align: center;
     }
 
-    .ion-people {
+    .ion-people,
+    .ion-arrow-right-c {
       font-size: 1.5em;
     }
   }
