--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -11,6 +11,10 @@ $color-online: #1566a9 !default;
 $color-offline: #cf3e2a !default;
 $color-unseen: #d89100 !default;
 
+$color-24ghz: $color-primary !default;
+$color-5ghz: #e3a619 !default;
+$color-others: #0a9c92 !default;
+
 $color-map-background: #f8f4f0 !default;
 
 $font-family: Assistant, sans-serif !default;
