--- a/scss/modules/_legend.scss
+++ b/scss/modules/_legend.scss
@@ -17,13 +17,19 @@ header {
 }
 
 .legend {
-  .symbol {
-    border-radius: 50%;
-    display: inline-block;
-    height: 1em;
-    vertical-align: -5%;
-    width: 1em;
+  span {
+    &:not(:first-child) {
+      margin-left: 1em;
+    }
   }
+}
+
+.symbol {
+  border-radius: 50%;
+  display: inline-block;
+  height: 1em;
+  vertical-align: -5%;
+  width: 1em;
 }
 
 // Dot looks compared to thin font a bit darker - lighten it 10%
@@ -45,7 +51,20 @@ header {
   }
 }
 
-.legend-online,
-.legend-offline {
-  margin-left: 1em;
+.legend-24ghz {
+  .symbol {
+    background-color: $color-24ghz;
+  }
+}
+
+.legend-5ghz {
+  .symbol {
+    background-color: $color-5ghz;
+  }
+}
+
+.legend-others {
+  .symbol {
+    background-color: $color-others;
+  }
 }
