--- a/scss/modules/_infobox.scss
+++ b/scss/modules/_infobox.scss
@@ -1,5 +1,6 @@
 .infobox {
-  .clients {
+  .clients,
+  .gateway {
     display: flex;
 
     span {
@@ -7,7 +8,8 @@
       text-align: center;
     }
 
-    .ion-people {
+    .ion-people,
+    .ion-arrow-right-c {
       font-size: 1.5em;
     }
   }
