--- a/scss/modules/_proportion.scss
+++ b/scss/modules/_proportion.scss
@@ -16,6 +16,7 @@
 
   span {
     box-sizing: border-box;
+    color: $color-white;
     display: inline-block;
     font-weight: bold;
     min-width: 1.5em;
