--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -67,6 +67,10 @@
         white-space: nowrap;
         width: 60%;
       }
+
+      &:nth-child(2) {
+        white-space: nowrap;
+      }
     }
   }
 
