--- a/scss/modules/_infobox.scss
+++ b/scss/modules/_infobox.scss
@@ -15,18 +15,26 @@
   }
 
   .node-links {
+    padding-bottom: 15px;
     table-layout: fixed;
 
     th,
     td {
-      &:nth-child(3),
-      &:nth-child(5),
-      &:nth-child(6) {
-        width: 9%;
+
+      &:first-child {
+        width: 15px;
+      }
+
+      &:nth-child(2) {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 50%;
       }
 
       &:nth-child(4) {
         white-space: nowrap;
+        width: 22%;
       }
     }
   }
