text-align: center in lists

--- a/scss/modules/_table.scss
+++ b/scss/modules/_table.scss
@@ -25,7 +25,7 @@ table {
 td,
 th {
   line-height: 1.41em;
-  text-align: right;
+  text-align: center;
 
   &:first-child {
     text-align: left;
