--- a/scss/modules/_table.scss
+++ b/scss/modules/_table.scss
@@ -22,6 +22,16 @@ table {
   }
 }
 
+tr {
+  &.header {
+    font-size: 1.2em;
+
+    th {
+      padding-top: 1em;
+    }
+  }
+}
+
 td,
 th {
   line-height: 1.41em;
